[project]
name = "AIOPS-Threat-Intelligence-Ensemble"
version = "0.1.0"
description = "AIOPS Threat Intelligence Ensemble is a Python package that provides tools and functionalities for threat intelligence analysis using ensemble learning techniques. It integrates various machine learning algorithms and data processing methods to enhance the detection and analysis of cyber threats."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.3",
    "plotly>=6.5.0",
    "psutil>=7.1.3",
    "scikeras>=0.13.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
]
